modification avec value

--- a/factsage-2.html
+++ b/factsage-2.html
@@ -38,12 +38,12 @@
     <script>
 
         function modificationTableau(){
-            // if(document.getElementById("button1").innerHTML == "Effacer tableau 4"){
-                document.getElementById("button1").innerHTML = "Ajouter tableau 4";
-               // }
-            //else{
-                //document.getElementById("button1").innerHTML = "Effacer tableau 4";
-                //}
+             if(document.getElementById("button1").value == "Ajouter tableau 4"){
+                document.getElementById("button1").value = "Effacer tableau 4";
+                }
+            else{
+                document.getElementById("button1").value= "Ajouter tableau 4";
+                }
         }
 
     </script>
