ajout de quelque modifications

--- a/factsage-1.html
+++ b/factsage-1.html
@@ -17,23 +17,23 @@
         border-collapse: collapse;
         margin:7px;
     }
-    /* modification des attributs de la balise th */
-    th{
-        background-color:cornsilk;
-        margin:0px;
-        padding : 0px;
-        border-bottom: 1px solid black;
-    }
-     /* création d'une classe personalisée pour les tableaux à deux rangés d'entête */
-    .trCustom{
-        background-color:cornsilk;
-        margin:5px;
-        padding : 5px;
-        font-weight: bold;
-        text-align:center;
-        border-bottom: 1px solid black;
 
-    }
+        /* modification des attributs de la balise th */
+        th {
+            background-color: #f7eecf;
+            margin: 0px;
+            padding: 0px;
+            border-bottom: 1px solid black;
+        }
+     /* création d'une classe personalisée pour les tableaux à deux rangés d'entête */
+        .trCustom {
+            background-color: #f7eecf;
+            margin: 5px;
+            padding: 5px;
+            font-weight: bold;
+            text-align: center;
+            border-bottom: 1px solid black;
+        }
 
     </style>
 
