--- a/factsage-2.html
+++ b/factsage-2.html
@@ -30,7 +30,6 @@
         }
 
 
-
     </style>
 
     <script>
@@ -56,7 +55,7 @@
 
 <body>
 
-    <button id="button1" value="TableauOuvert" onclick= "modificationTableau()">Effacer tableau 4</button>
+    <button id = "button1" onclick = "modificationTableau()">Effacer tableau 4</button>
 
     <h1>TD1, étape 2</h1>
 
@@ -79,14 +78,10 @@
     </table>
 
     <table id="constituents">
-        <div>
             <tr>
-
                 <th> STREAM CONSTITUENTS</th>
                 <th> AMOUNT/mol </th>
-
             </tr>
-        </div>
         <tr>
             <td>Mg</td>
             <td>1.0000E+00</td>
