--- a/td2/factsage.html
+++ b/td2/factsage.html
@@ -1,6 +1,7 @@
 <DOCTYPE <!DOCTYPE html>
 <html>
 <head>
+    <TITLE>F*A*C*T - EQUILIB-Web</TITLE>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
@@ -10,14 +11,103 @@
 </head>
 
 <body>
-    <table>
-            <CENTER>
-                    <font face="Trebuchet MS, Arial">
-                            <font color="black" size="2">
-                                chemical equilibria of an ideal gas with pure solids and liquids
-                            </font>
-                    </font>
-                </CENTER>
-    </table>
+     <div class="general"  >  <!--cellspacing="10px"-->
+        <div class="container1" >
+            Chemical equilibria of an ideal gas with pure solids and liquids
+        </div>
+            
+        <div class="container2">
+            <b> 
+            <label> T: <input name="T"></label>
+            <label>Units: </label>
+
+                <select name="T_units" size="1" id="T_units">
+                        <option value="TK" selected>K</option>
+                        <option value="TC">C</option>
+                </select>
+
+            <label>mass: </label>
+            <select size=1 name=MASS>
+                <option value="X">mole</option>
+                <option value="%" selected>gram</option>
+            </select>
+
+            <label>P: </label>
+            <input name="P"></label>
+            <label>Units: </label>
+            <select size=1 name=PRESSURE>
+                    <option value="ATM" selected>atm</option>
+                    <option value="BAR">bar</option>
+            </select>
+
+            </b>
+        </div>
+
+        <div class="container30">
+            <div class="container31">
+                <label>Mass </label>
+                <input name="mass1">
+
+                <label>Species </label>
+                <input name="Species1"> +
+            </div>
+
+            <div class="container32">
+                <label>Mass </label>
+                <input name="mass2">
+
+                <label>Species </label>
+                <input name="mass2">
+            </div>
+        </div>
+
+        <div class="container4">
+
+            <div class="container5">
+                <b>
+                    Output:
+                </b>
+                <label>Concentration cut-off </label>
+                <select size=1 name=CUT>
+                        <option value="1E-70" selected>1e-70</option>
+                        <option value="1E-50">1e-50</option>
+                        <option value="1E-30">1e-30</option>
+                        <option value="1E-20">1e-20</option>
+                        <option value="1E-15">1e-15</option>
+                        <option value="1E-10">1e-10</option>
+                        <option value="1E-8">1e-8</option>
+                        <option value="1E-6">1e-6</option>
+                        <option value="1E-5">1e-5</option>
+                </select>
+
+                <label>Format </label>
+                <select name=format size=1 id="select">
+                        <option value="OUTC">ChemSage</option>
+                        <option value="OUTB" selected>Extended</option>
+                        <option value="OUTF">FACT</option>
+                </select>
+
+                <label>Distribution </label>
+                <select size=1 name=DIST>
+                        <option value="NODIST" selected>no</option>
+                        <option value="DIST">yes</option>
+                </select>
+
+            </div>
+        </div>
+
+    </div>
+
+    <!-- <table width="100%"  style="background-color:gray;" border="1" cellspacing="10">
+
+        <td>
+            <table  style="background-color:gray;" >
+
+                <td>Chemical equilibria of an ideal gas with pure solids and liquids </td>
+
+            </table>
+        </td>
+
+    </table> -->
 </body>
 </html>
