5e partie est fini

--- a/td2/factsage.html
+++ b/td2/factsage.html
@@ -12,7 +12,6 @@
 
 <body>
     <div class="general">
-<!--cellspacing="10px"-->
         <div class="container1">
             Chemical equilibria of an ideal gas with pure solids and liquids
         </div>
@@ -51,12 +50,12 @@
         </div>
 
         <div class="container3">
-            <div class="c31">
-                <div class="311">
+            <div>
+                <div>
                     <div>Mass </div>
                     <input name="mass1" size="10">
                 </div>
-                <div class="312">
+                <div>
                     <div>
                         Mass
                     </div>
@@ -64,12 +63,12 @@
                 </div>
             </div>
 
-            <div class="c32">
-                <div class="321">
+            <div>
+                <div>
                     <div>Species </div>
                     <input value="Si" name="Species1" size="10">  +
                 </div>
-                <div id="322">
+                <div>
                     <div>Species </div>
                     <input value="O2" name="Species2" size="10">
                     <button name="plus" style="height:22px;width:40px"> + </button>
